Bug 134939 - Font size fields (and other fields) keep losing focus (GTK3)
Summary: Font size fields (and other fields) keep losing focus (GTK3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.1 rc
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisected, bisected, regression
: 136185 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2020-07-18 22:23 UTC by Kai
Modified: 2020-10-19 13:43 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (389.71 KB, video/webm)
2020-07-18 22:24 UTC, Kai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai 2020-07-18 22:23:42 UTC
Description:
I cannot seem to be able to modify the font size by typing in the number. The input always refocuses to the slide.

Steps to Reproduce:
1. Create a new presentation
2. Select some text in a slide
3. Click the font size button
4. Type in a number with the keyboard

Actual Results:
The first digit (at most) get entered in the font size field before focus switches back to the selected text and edits it.

Expected Results:
Focus should stay on the font size field.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
See the attached video for a demonstration
Comment 1 Kai 2020-07-18 22:24:16 UTC
Created attachment 163249 [details]
Screencast
Comment 2 Kai 2020-07-18 22:25:59 UTC
Yikes I just noticed the pointer isn't recorded correctly in the Screencast, so it might not be that intuitive to watch.
Comment 3 asksolutions 2020-07-25 06:55:15 UTC Comment hidden (spam)
Comment 4 rohit singh 2020-08-27 07:34:50 UTC Comment hidden (spam)
Comment 5 sora34ce 2020-08-27 17:12:02 UTC
I know your version is in 7.0.0.1, but in my version the error doesn't seem to work. I highlighted the text and tried altering the number but the full number makes it in. No idea about it though

Version: 7.1.0.0.alpha0+
Build ID: 52820b52b3bca45e2db527d1cc5f4488b2e0b9d0
CPU threads: 8; OS: Mac OS X 10.15.6; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 6 Kai 2020-08-27 22:13:29 UTC
(In reply to sora34ce from comment #5)
> I know your version is in 7.0.0.1, but in my version the error doesn't seem
> to work. I highlighted the text and tried altering the number but the full
> number makes it in. No idea about it though
> 
> Version: 7.1.0.0.alpha0+
> Build ID: 52820b52b3bca45e2db527d1cc5f4488b2e0b9d0
> CPU threads: 8; OS: Mac OS X 10.15.6; UI render: default; VCL: osx
> Locale: en-US (en_US.UTF-8); UI: en-US
> Calc: threaded

It might only be a problem with Linux, or maybe only Wayland. I'll do some more investigating this weekend.
Comment 7 Kai 2020-10-16 20:14:23 UTC
Just FYI: I still observe this on LO 7.0.2.2
Comment 8 Buovjaga 2020-10-17 14:24:51 UTC
*** Bug 137201 has been marked as a duplicate of this bug. ***
Comment 9 Buovjaga 2020-10-17 14:25:07 UTC
*** Bug 136185 has been marked as a duplicate of this bug. ***
Comment 10 Buovjaga 2020-10-17 14:27:14 UTC
Reproduced, but only with GTK3 backend.

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 9b34dc20b6946698ae6ce2d5d859885bfb444633
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 16 October 2020
Comment 11 Xisco Faulí 2020-10-17 14:51:44 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8950cb8ae6a1621729ec43a6dd1c29cf04260797

author	Caolán McNamara <caolanm@redhat.com>	2020-02-04 11:34:29 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-06 12:26:37 +0100
commit 8950cb8ae6a1621729ec43a6dd1c29cf04260797 (patch)
tree 2f0a50e6778ab425813ad626e634cd8b233514ca
parent 415c1b05242b80ca883596952caa0e179a07b409 (diff)
weld SvxFontSizeBox_Impl

bisected with: bibisect-linux64-7.0

Adding Cc: to Caolán McNamara
Comment 12 Caolán McNamara 2020-10-17 14:56:00 UTC
not a problem in writer, so something specific to impress/draw must be grabbing focus
Comment 13 Reinhart Previano 2020-10-17 15:26:40 UTC
Hello, I'm the original author of duplicate bug 137201.

I can confirm that this is reproducible in both Impress and Draw, but I think this issue might occur when editing shapes on Writer and Calc as well. I will re-check about the reproducibility of this issue, and try to give test cases to prove them.

Currently I only have GNOME and XFCE installed (both are using Xorg instead of Wayland) but this is only reproducible under GNOME. I might try installing KDE and Wayland to check whether they are also affected by the issue.
Comment 14 Caolán McNamara 2020-10-17 15:30:32 UTC
Looks like its the input-engine support triggering CommandEventId::CursorPos events and impress is grabbing focus on getting them. It shouldn't get them at all in this case so https://gerrit.libreoffice.org/c/core/+/104466 should fix it and presumably this is the case in all the related bugs
Comment 15 Caolán McNamara 2020-10-17 16:08:15 UTC
That solves what I see, done in master, backport to 7-0 in gerrit
Comment 16 Commit Notification 2020-10-17 16:08:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/27756f26b17ae5c0f7bcd560c5ede84776c1c5e4

Resolves: tdf#134939 don't update IM position if focus is in another widget

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Buovjaga 2020-10-17 16:32:55 UTC
(In reply to Caolán McNamara from comment #15)
> That solves what I see, done in master, backport to 7-0 in gerrit

Ctrl-A in Sidebar font family or size fields still selects the editing area text box contents. But Kai's issue is indeed gone. I can input numbers and they do not bleed into the editing area. I will set bug 137201 to NEW again.

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 27756f26b17ae5c0f7bcd560c5ede84776c1c5e4
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 17 October 2020
Comment 18 Buovjaga 2020-10-17 16:37:56 UTC
Bug 136185 was fixed by Caolán's commit, so stays closed!
Comment 19 Commit Notification 2020-10-19 09:22:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/d76e9fc4edcdf9a44cb2ed9542261064a8a76dde

Resolves: tdf#137201 and tdf#134939 don't update IM if focus is in another widget

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.