Resolves: tdf#134939 don't update IM position if focus is in another widget

Change-Id: Ia078ed9c1896d4a3541525ea2907760ce235dfd8